# sabre

./: .gitignore  Cargo.toml  agents.md  toolchain.toml
.github/workflows/: rust.yml
crates/graphics/: Cargo.toml  build.rs
crates/graphics/src/: color.rs  context.rs  draw.rs  glyph_cache.rs  lib.rs  pipeline.rs  shader.wgsl  surface.rs  text.rs  text_style.rs  texture.rs
crates/plinth/: Cargo.toml
crates/plinth/src/: double_click_tracker.rs  lib.rs  runtime.rs  shell.rs
crates/plinth/src/graphics/: color.rs  context.rs  draw.rs  glyph_cache.rs  mod.rs  paint.rs  pipeline.rs  shader.wgsl  shader_data.rs  surface.rs  text.rs  texture.rs
crates/plinth/src/shell/: app_context.rs  clipboard.rs  double_click_tracker.rs  frame.rs  headless.rs  input.rs  window.rs  winit.rs
crates/plinth/src/ui/: builder.rs  common_widgets.rs  container.rs  context.rs  id.rs  input.rs  layout.rs  mod.rs  style.rs  text.rs  theme.rs  widget.rs  widgets.rs
crates/plinth/src/ui/layout/: compute.rs  mod.rs  tree.rs  types.rs
crates/plinth/src/ui/style/: properties.rs  registry.rs  stateful_property.rs
crates/plinth/src/ui/text/: editable.rs  mod.rs  non_editable.rs
crates/plinth/src/ui/widget/: button.rs  container.rs  context_menu.rs  dropdown.rs  edge_region.rs  frame.rs  horizontal_separator.rs  image.rs  label.rs  macros.rs  menu.rs  panel.rs  section_panel.rs  split_pane.rs  surface.rs  text_edit.rs  vertical_separator.rs
crates/ui_base/: Cargo.toml
crates/ui_base/src/: input.rs  layout.rs  lib.rs  style.rs  text.rs  ui.rs
crates/workspace-hack/: Cargo.toml
docs/: right-click-context-menu-plan.md
docs/superpowers/plans/: 2026-06-09-plinth-findings.md
examples/: context_menu.rs  counter.rs  dropdown.rs  file_picker.rs  images.rs  layout_center.rs  n_split.rs  side_panels.rs  temp_converter.rs  text_edit.rs  three_split.rs
src/: app.rs  color.rs  context.rs  graphics.rs  id.rs  input.rs  layout.rs  lib.rs  main.rs  runtime.rs  shader.wgsl  text.rs  ui.rs  widget.rs  widgets.rs  window.rs
src/graphics/: draw.rs  pipeline.rs  shader.wgsl  surface.rs  texture_manager.rs  uploader.rs
