[workspace]
members = ["crates/graphics", "crates/ui_base", "crates/workspace-hack"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
dbg_macro = "warn"

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.dependencies]
# Internal dependencies
graphics = { path = "crates/graphics" }

# External dependencies
arrayvec = "0.7"
bytemuck = "1"
color = "0.3"
color-backtrace = { version = "0.7" }
futures = "0.3"
glamour = "0.18"
guillotiere = "0.6"
image = { version = "0.25", default-features = false }
memmap2 = "0.9"
parley = "0.5"
slotmap = "1"
smallvec = "1.15"
swash = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = { version = "0.11", default-features = false }
wgpu = { version = "26", default-features = false }
winit = "0.30"

[profile.dev.build-override]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[package]
name = "sabre"
version.workspace = true
edition.workspace = true

[features]
default = []
profile = ["dep:tracing-tracy", "tracing-tracy/enable"]

[dependencies]
workspace-hack = { version = "0.1", path = "crates/workspace-hack" }

graphics = { path = "crates/graphics" }
ui_base = { path = "crates/ui_base" }

futures = { workspace = true }
smallvec = { workspace = true, features = [
    "const_generics",
    "const_new",
    "union",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "parking_lot",
    "smallvec",
] }
tracing-tracy = { workspace = true, optional = true, features = [
    "broadcast",
    "callstack-inlines",
    "code-transfer",
    "context-switch-tracing",
    "fibers",
    "ondemand",
    "only-localhost",
    "sampling",
    "system-tracing",
] }
winit = { workspace = true }

[dev-dependencies]
color-backtrace = { workspace = true }
