[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
dbg_macro = "warn"

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.dependencies]
# Internal dependencies
plinth = { path = "crates/plinth" }

# External dependencies
arrayvec = "0.7"
bytemuck = "1"
color = "0.3"
futures = "0.3"
glamour = "0.18"
guillotiere = "0.6"
image = { version = "0.25", default-features = false }
memmap2 = "0.9"
parley = "0.5"
rapidhash = "3"
slotmap = "1"
smallvec = "1.15"
swash = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = { version = "0.11", default-features = false }
wgpu = { version = "26", default-features = false }
winit = "0.30"

[profile.dev.build-override]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
panic = "abort"

[package]
name = "sabre"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
profile = ["dep:tracing-tracy", "tracing-tracy/enable"]

[dependencies]
plinth = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "parking_lot",
    "smallvec",
] }
tracing-tracy = { workspace = true, optional = true, features = [
    "broadcast",
    "callstack-inlines",
    "code-transfer",
    "context-switch-tracing",
    "fibers",
    "ondemand",
    "only-localhost",
    "sampling",
    "system-tracing",
] }
