[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
dbg_macro = "warn"

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.dependencies]
# Internal dependencies
plinth = { path = "crates/plinth" }

# External dependencies
bitflags = { version = "2", features = ["bytemuck"] }
bytemuck = "1"
color = "0.3"
glamour = "0.18"
guillotiere = "0.6"
image = { version = "0.25", default-features = false }
keyboard-types = "0.8"
memmap2 = "0.9"
parley = "0.7"
pollster = "0.4"
rapidhash = "4"
slotmap = "1"
smallvec = "1"
swash = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = { version = "0.11", default-features = false }
wgpu = { version = "28", default-features = false, features = [
    "std",
    "parking_lot",
] }
winit = "0.31.0-beta.2"
windows-sys = "0.61"

[profile.dev.build-override]
opt-level = 2

[profile.release]
lto = "thin"
panic = "abort"

[package]
name = "sabre"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
profile = ["dep:tracing-tracy", "tracing-tracy/enable"]

[dependencies]
plinth = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "parking_lot",
    "smallvec",
] }
tracing-tracy = { workspace = true, optional = true, features = [
    "broadcast",
    "callstack-inlines",
    "code-transfer",
    "context-switch-tracing",
    "fibers",
    "ondemand",
    "only-localhost",
    "sampling",
    "system-tracing",
] }
