[package]
name = "graphics"
version.workspace = true
edition.workspace = true

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }

bytemuck = { workspace = true }
color = { workspace = true }
futures = { workspace = true }
glamour = { workspace = true }
guillotiere = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
memmap2 = { workspace = true }
parley = { workspace = true }
slotmap = { workspace = true }
swash = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-tracy = { workspace = true }
winit = { workspace = true }

[target.'cfg(windows)'.dependencies]
wgpu = { workspace = true, features = ["dx12", "static-dxc"] }
