[package]
name = "graphics"
version.workspace = true
edition.workspace = true

[features]
profile = ["dep:tracing-tracy"]

[dependencies]

bytemuck = { workspace = true }
color = { workspace = true }
futures = { workspace = true }
glamour = { workspace = true }
guillotiere = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
memmap2 = { workspace = true }
parley = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
swash = { workspace = true }
tracing = { workspace = true }
tracing-tracy = { workspace = true, optional = true }
winit = { workspace = true }

[target.'cfg(windows)'.dependencies]
wgpu = { workspace = true, features = ["wgsl", "dx12"] }
