[package]
name = "plinth"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
profile = ["dep:tracing-tracy"]

[dependencies]

arrayvec = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
color = { workspace = true }
glamour = { workspace = true }
guillotiere = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
keyboard-types = { workspace = true }
memmap2 = { workspace = true }
parley = { workspace = true }
pollster = { workspace = true }
rapidhash = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true, features = ["union", "const_generics"] }
swash = { workspace = true, features = ["scale"] }
tracing = { workspace = true }
tracing-tracy = { workspace = true, optional = true }
winit = { workspace = true }

[target.'cfg(windows)'.dependencies]
wgpu = { workspace = true, features = ["wgsl", "dx12", "static-dxc"] }
windows-sys = { workspace = true, features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
] }
